@@ -2,7 +2,7 @@ config BR2_PACKAGE_NANO
 	bool "nano"
 	select BR2_PACKAGE_NCURSES
 	help
-	  A nice ncurses-based editor.  Started out as a clone of pico.
+	  A nice ncurses-based editor. Started out as a clone of pico.
 	  Great editor for new users.
 
 	  http://www.nano-editor.org/
